# manning-fpcpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
02-03-filter-and-transform/: main.cpp
02-04-filter-and-transform-combined/: main.cpp
02-05-filtering-using-remove-if/: main.cpp
02-06-move-selected/: main.cpp
03-01-counting-team-members/: main.cpp
03-02-older-than-generic/: main.cpp
04-02-printing-people/: main.cpp
07-01-top-movies/: Makefile  main.cpp
07-02-word-frequency/: main.cpp
10-01-functors-optional/: main.cpp
10-02-monad-optional/: Makefile  main.cpp
10-03-monad-range/: Makefile  main.cpp
12-01-bookmark-service/: Makefile
13-01-bookmark-service-testing/: Makefile  main.cpp
13-02-count-lines-test/: Makefile  main.cpp
13-03-count-lines-test-generation/: main.cpp
