project(FPCPP)
cmake_minimum_required(VERSION 3.20)


set_property(GLOBAL PROPERTY USE_FOLDERS ON)

include_directories(common)

# # chapter-01
# add_executable(01-01-count-lines-stdcount  01-01-count-lines-stdcount/main.cpp  )
# add_executable(01-02-count-lines-transform 01-02-count-lines-transform/main.cpp )

# set_property(TARGET 01-01-count-lines-stdcount   PROPERTY FOLDER "examples/chapter-01")
# set_property(TARGET 01-02-count-lines-transform  PROPERTY FOLDER "examples/chapter-01")

# # chapter-02
# add_executable(02-01-average-score                  02-01-average-score/main.cpp)
# add_executable(02-02-count-lines-using-accumulate   02-02-count-lines-using-accumulate/main.cpp)
# add_executable(02-03-filter-and-transform           02-03-filter-and-transform/main.cpp)
# add_executable(02-04-filter-and-transform-combined  02-04-filter-and-transform-combined/main.cpp)
# add_executable(02-05-filtering-using-remove-if      02-05-filtering-using-remove-if/main.cpp)
# add_executable(02-06-move-selected                  02-06-move-selected/main.cpp)

# set_property(TARGET 02-01-average-score                 PROPERTY FOLDER "examples/chapter-02")
# set_property(TARGET 02-02-count-lines-using-accumulate  PROPERTY FOLDER "examples/chapter-02")
# set_property(TARGET 02-03-filter-and-transform          PROPERTY FOLDER "examples/chapter-02")
# set_property(TARGET 02-04-filter-and-transform-combined PROPERTY FOLDER "examples/chapter-02")
# set_property(TARGET 02-05-filtering-using-remove-if     PROPERTY FOLDER "examples/chapter-02")
# set_property(TARGET 02-06-move-selected                 PROPERTY FOLDER "examples/chapter-02")

# # chapter-03
# add_executable(03-01-counting-team-members 03-01-counting-team-members/main.cpp)
# add_executable(03-02-older-than-generic    03-02-older-than-generic/main.cpp)

# set_property(TARGET 03-01-counting-team-members PROPERTY FOLDER "examples/chapter-03")
# set_property(TARGET 03-02-older-than-generic    PROPERTY FOLDER "examples/chapter-03")

# # chapter-04
# add_executable(04-01-knuth-problem   04-01-knuth-problem/main.cpp)
# add_executable(04-02-printing-people 04-02-printing-people/main.cpp)

# set_property(TARGET 04-01-knuth-problem   PROPERTY FOLDER "examples/chapter-04")
# set_property(TARGET 04-02-printing-people PROPERTY FOLDER "examples/chapter-04")

